[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ParentingTimeSchedule"
version = "0.0.3"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Jim Graszer", email = "jim@lemmalegal.com" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
